deploy/kubernetes/components/storage/arches-minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: arches-minio
  name: arches-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      component: arches-minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: arches-minio
    spec:
      containers:
        - args:
            - minio
            - server
            - /minio_data
            - --console-address
            - ":9001"
            - --address
            - ":443"
          image: minio/minio:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:443/minio/health/live
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 20
          name: arches-minio
          ports:
            - containerPort: 443
            - containerPort: 9001
          resources: {}
          volumeMounts:
            - mountPath: /minio_data
              name: minio-data
      restartPolicy: Always
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
