deploy/kubernetes/components/storage/arches-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: arches-minio
  name: arches-minio
spec:
  ports:
    - name: "443"
      port: 443
      targetPort: 443
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    component: arches-minio
