deploy/kubernetes/components/storage/arches-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arches-minio-ingress
spec:
  rules:
    - host: storage-dashboard.archesai.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arches-minio
                port:
                  number: 9001
    - host: storage.archesai.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arches-minio
                port:
                  number: 443
